--- a/_config.yml
+++ b/_config.yml
@@ -13,22 +13,41 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+title: Qunitessential Dread
+email: josephldailey@gmail.com
+description: >-
+  Qunitessential Dread is a collection of games designed for the Dread roll
+  playing system. It is open for public contribution.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: daileyjoe
+github_username:  joedailey
 
 # Build settings
 markdown: kramdown
-theme: minima
 plugins:
   - jekyll-feed
+
+defaults:
+  -
+    scope:
+      path: ""
+      type: "games"
+    values:
+      layout: "game"
+  -
+    scope:
+      path: ""
+    values:
+      layout: "default"
+
+collections:
+  games:
+    output: true
+
+sass:
+    sass_dir: _sass
+    style: compressed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
